--- a/final_proj_venv/pyvenv.cfg
+++ b/final_proj_venv/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /usr/bin
+home = /home/pavel/Work/Skill_Factory_DSPR/GitHub_Projects/Final_Project/final_proj_venv/bin
 include-system-site-packages = false
 version = 3.10.7
